--- a/Module02.ipynb
+++ b/Module02.ipynb
@@ -511,6 +511,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>\n",
+    "By <b>type()</b> we know what is the datatype of a varibale\n",
+    "</p>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -529,6 +538,328 @@
    "source": [
     "name = \"Mritunjay\"\n",
     "type(name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's see <b>typecasting</b> or changing of datatype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "46"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(\"23\")+23"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = \"5\"\n",
+    "b = 6\n",
+    "int(a)+b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 3.56\n",
+    "print(type(a))\n",
+    "a = int(a)\n",
+    "print(type(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Implicit typecasting: When programming language automatically change a variable's datatype according to program need it is implicit typecasting.\n",
+    "# Explicit typecasting: If user has to convert datatype explcitly then it is explicit typecasting.\n",
+    "\n",
+    "#Implicit typecasting\n",
+    "a = 5\n",
+    "b = a/1.0\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#while loop\n",
+    "n = 7\n",
+    "i = 1\n",
+    "while(i<n) :\n",
+    "    print(i)\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "While runs successfull\n"
+     ]
+    }
+   ],
+   "source": [
+    "# while-else\n",
+    "count = 5\n",
+    "while(count > 0):\n",
+    "    print(count)\n",
+    "    count -= 1\n",
+    "else:\n",
+    "    print(\"While runs successfull\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Break terminates or exits the loop\n",
+    "count = 5\n",
+    "while(count > 0):\n",
+    "    print(count)\n",
+    "    if count == 2:\n",
+    "        break\n",
+    "    count -= 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "4\n",
+      "3\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Continue will skip that particular iteration\n",
+    "count = 5\n",
+    "while(count > 0):\n",
+    "    if count == 2:\n",
+    "        count -= 1\n",
+    "        continue\n",
+    "    else:\n",
+    "        print(count)\n",
+    "        count -= 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "M\n",
+      "r\n",
+      "i\n",
+      "t\n",
+      "u\n",
+      "n\n",
+      "j\n",
+      "a\n",
+      "y\n"
+     ]
+    }
+   ],
+   "source": [
+    "#for loop is used to run a loop sequentially\n",
+    "for i in \"Mritunjay\":\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mritunjay\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "Aman\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [\"Mritunjay\",1,2,3,\"Aman\"]\n",
+    "for i in l:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "M\n",
+      "r\n",
+      "i\n",
+      "t\n",
+      "u\n",
+      "n\n",
+      "j\n",
+      "a\n",
+      "y\n",
+      "for loop run without a break statement\n"
+     ]
+    }
+   ],
+   "source": [
+    "#for-else\n",
+    "s = \"Mritunjay\"\n",
+    "for i in s:\n",
+    "    print(i)\n",
+    "else:\n",
+    "    print(\"for loop run without a break statement\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "M\n",
+      "r\n",
+      "i\n",
+      "t\n",
+      "u\n",
+      "n\n"
+     ]
+    }
+   ],
+   "source": [
+    "#for-break\n",
+    "s = \"Mritunjay\"\n",
+    "for i in s:\n",
+    "    print(i)\n",
+    "    if(i==\"n\"):\n",
+    "        break\n",
+    "else:\n",
+    "    print(\"for loop run without a break statement\")"
    ]
   },
   {
